# toy_wasmer

./: Cargo.toml  README.md
src/: main.rs
