[package]
name = "toy_wasmtime"
version = "0.1.0"
authors = ["Ruslan Fadeev <kinrany@yandex.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.18.2"
paw = "1.0.0"
structopt = { version = "0.3.20", default-features = false, features = ["paw"] }
wasmtime = "0.21.0"
